--- a/RESTfulWebAPITask1/RESTfulWebAPITask1/appsettings.json
+++ b/RESTfulWebAPITask1/RESTfulWebAPITask1/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "CartDbConnection": "Data Source=EPINPUNW046E\\SQLEXPRESS;Initial Catalog=CatalogServiceDB;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
+    },
+    "AllowedHosts": "*"
 }
