--- a/RESTfulWebAPITask1/RESTfulWebAPITask1/RESTfulWebAPITask1.csproj
+++ b/RESTfulWebAPITask1/RESTfulWebAPITask1/RESTfulWebAPITask1.csproj
@@ -9,7 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
