added docker yml and docker file to containerize the apllication with sql and rabbitmq

--- a/RESTfulWebAPITask1/RESTfulWebAPITask1/appsettings.json
+++ b/RESTfulWebAPITask1/RESTfulWebAPITask1/appsettings.json
@@ -6,12 +6,18 @@
         }
     },
     "ConnectionStrings": {
-        "CartDbConnection": "Data Source=EPINPUNW046E\\SQLEXPRESS;Initial Catalog=CatalogServiceDB;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=sql-db,1433;Database=CatalogServiceDB;User=sa;Password=useyourpassowordhere;"
+        //"CartDbConnection": "Data Source=EPINPUNW046E\\SQLEXPRESS;Initial Catalog=CatalogServiceDB;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True;MultipleActiveResultSets=true"
     },
     "Jwt": {
         "Key": "jwtsupersecretkey123456forcatalogandcartservice!", // Shared key as jwt token will remain same for catalog and cart service
         "Issuer": "SharedIssuer", // Shared issuer
         "Audience": "SharedAudience" // Shared audience
+    },
+    "RabbitMQ": {
+        "HostName": "rabbitmq",
+        "UserName": "guest",
+        "Password": "guest"
     },
     "AllowedHosts": "*"
 }
